[tool.poetry]
name = "websocket-timer"
version = "0.1.0"
description = ""
authors = ["kuznetsov-m"]

[tool.poetry.dependencies]
python = "3.8.1"
Flask-SocketIO = "^5.2.0"
gunicorn = {url = "https://github.com/benoitc/gunicorn/archive/refs/heads/master.zip#egg=gunicorn==20.1.0"}
eventlet = "0.29.0"
gevent = "^21.12.0"
python-dotenv = "^0.20.0"
Flask-SQLAlchemy = "^2.5.1"
Flask-Migrate = "^3.1.0"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
